--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss dev/css/styles.scss css/styles.css"
+    "build-css": "node-sass --include-path scss dev/css/styles.scss assets/css/styles.css",
+    "build-js": "webpack"
+  },
+  "engines": {
+    "node": "8.9.0"
   },
   "repository": {
     "type": "git",
@@ -18,6 +22,8 @@
   },
   "homepage": "https://github.com/oiler/html#readme",
   "dependencies": {
-    "node-sass": "4.9.3"
+    "node-sass": "4.9.3",
+    "webpack": "4.17.0",
+    "webpack-cli": "3.1.0"
   }
 }
