--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "homepage": "https://github.com/oiler/html#readme",
   "dependencies": {
-    "node-sass": "4.9.3",
-    "webpack": "4.17.0",
-    "webpack-cli": "3.1.0"
+    "node-sass": "^4.12.0",
+    "webpack": "^4.38.0",
+    "webpack-cli": "^3.3.6"
   }
 }
