--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss dev/css/styles.scss assets/css/styles.css",
+    "build-css": "node-sass --include-path scss dev/css/styles.scss build/css/styles.css",
     "build-js": "webpack"
   },
   "engines": {
