--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "node-sass ./dev/css/ -o ./build/css/ -w -r --source-map-embed --source-map-contents --output-style expanded | node-sass ./dev/css/styles.scss ./build/css/styles.css -w --output-style compressed",
-    "build-css": "node-sass --include-path scss dev/css/styles.scss build/css/styles.css",
+    "sass": "node-sass ./src/scss/ -o ./build/css/ -w -r --source-map-embed --source-map-contents --output-style expanded | node-sass ./src/scss/styles.scss ./build/css/styles.min.css -w --output-style compressed",
+    "watch-css": "f=${f:-styles}; node-sass ./src/scss/ -o ./build/css/ -w -r --source-map-embed --source-map-contents --output-style expanded | node-sass ./src/scss/$f.scss ./build/css/$f.min.css -w --output-style compressed",
+    "build-css": "f=${f:-styles}; node-sass --include-path scss src/scss/$f.scss build/css/$f.css --output-style compact",
     "watch-js": "webpack --watch",
     "build-js": "webpack"
   },
